tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__OptionalTier1Fus-AAAAAAAAAAAAAAAAAAAMXA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3164,
  "prerequisites": [
    3162
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Osmium - from Helium and Tungsten. Osmium from the platline is quite power-hungry, which this recipe won't solve, but it will at least help you past the terrible output rate of Osmium. You can get it faster from here as long as you can keep supplying Tungsten and power.\n\nSunnarium - from Helium + Glowstone. If you've had difficulty in getting lots of Sunnarium after the Molecular Transformer nerf, you can try this for your Solar Panels and other things. Glowing Coral processing with UUM is recommended, though.\n\nBoron - from Lithium and Helium. If you haven't automated this yet, for Borosilicate Glass for example, this is one way to do it. You will need lots of glass for the Mega Blast Furnace and other big multis of the kind, so it's not a useless recipe.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Optional Tier 1 Fusion",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3162
  ],
  "rewards": [],
  "tasks": []
}
