tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__OptionalTier2Fus-AAAAAAAAAAAAAAAAAAAMdw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3191,
  "prerequisites": [
    3189
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Uranium - from Gold + Aluminium or Magnesium + Mercury. You should have already left nuclear fission behind, but if you ever need Uranium, you can use this? You should have a lot of it already.\n\nPlutonium - from Helium + Uranium. A quick 1:1 conversion from U238 to P239, but you already have access to Plutonium Ore, so this is probably pointless.\n\nCalifornium - from Beryllium + Plutonium. Mostly used for Oganesson, not very useful for anything else, and you won't need a lot of this if replicating Oganesson is an option.\n\n(These 3 recipes makes a possible chain to Oganesson, which can be made in t3 fusion. Not that they are necessarily the best option to get it.)\n\nExcited Uranium Fuel - from Hydrogen and Uranium Liquid Fuel. This is for the Naquadah Generator, which is late ZPM, or possibly to use in IC2 nukes, although that's the worse option. Basically, it's accelerated nuclear fission, if you have interest in that.\n\nExcited Plutonium Fuel - from Hydrogen and Plutonium Liquid Fuel. Same as above, but from Plutonium. This means it's more expensive, but also more powerful, and can yield a lot of power in the Naquadah Generator with the right additives.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Optional Tier 2 Fusion",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3189
  ],
  "rewards": [],
  "tasks": []
}
