tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__OptionalTier3Fus-AAAAAAAAAAAAAAAAAAAMeQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3193,
  "prerequisites": [
    3190
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Celestial Tungsten - from Advanced Nitinol + Tartarite. A GT++ material that can be made as plasma, at the very end of the plasma line. It provides a lot of power, but the material itself is useful for DTPF recipes, machine components and other things. Check the questline in How to Generate Power, starting at [quest]Welcome to the Plasma Chain[/quest], for more information.\n\nIndium - from Lithium + Silver. This is a nice optional fusion recipe, given how annoying Indium can be to get. Your options are to either replicate it, make it with fusion, obtain it from the naquadria line, or obtain it from processing sphalerite ore.\n\n(You can make Indium in other ways, of course, but this is a relatively popular, non-forced fusion recipe)\n\nOganesson - from Calcium + Californium. This is the best noble gas of them all, and a very power-hungry recipe compared to most. However, Oganesson will save you power on EBF recipes, reducing recipe time more than any other fluid, and it also boosts Void Miners to their maximum speed. Replicating it might be better, if you have the right setup with GT++ multis.\n\nAmericium - from Hydrogen + Plutonium 241. This is the cheaper Americium recipe that was promised to you in t2, and it no longer needs Lutetium. You should be able to get both of the inputs very easily, so enjoy your cheaper Americium!\n\nNeutronium - from Naquadria + Americium. Neutronium fusion? It's quite fast, you might want to give it a try!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Optional Tier 3 Fusion",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3190
  ],
  "rewards": [],
  "tasks": []
}
