tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__Plutonium239-AAAAAAAAAAAAAAAAAAAMZA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3172,
  "prerequisites": [
    3169
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Red as an ingot, white as a blob. These are the same element, and the same isotope, even if they don't seem like it.\n\nPlutonium is a major part of nuclear fission reaction, mainly as a product of Uranium fissile fuel, when an atom in the mix captures a neutron and then emits an electron and an anti-neutrino. After several hours in the reactor, the fuel is considered depleted and there's enough Plutonium in it to separate the two through thermal centrifuging, a basic and inefficient way to do nuclear reprocessing. Later on, it's possible to improve your methods of handling spent nuclear fuel, but this is the first way you get this nuclear byproduct.\n\nIf you've made Quantum Eyes, you might know one of the main uses of Plutonium: to get Radium. By having enough of it to serve as a catalyst in the reaction, you can convert Uranium to Radium in small quantities without losing any Plutonium. Since you need 6 ingots, you will have to do 3 cycles of the setup shown in the quest before this one, or more if you're running smaller Uranium nukes. However, there is another useful thing you can use this for at this time: more nuclear fuel.\n\nNot just more nuclear fuel, but a different, more complex but also more powerful nuclear fuel. It's known as MOX fuel, and it is essentially a mix of Uranium and Plutonium. The catch is that all the Plutonium spent on creating the fuel is returned to you when reprocessing the depleted rods, alongside the extra you usually get, but not the Uranium return. To source a nuke of this kind, you will need more than 6 ingots.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Plutonium 239",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3169
  ],
  "rewards": [],
  "tasks": []
}
