tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__PoweringupFluidN-AAAAAAAAAAAAAAAAAAAMXg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3166,
  "prerequisites": [
    3156
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The previous setup's EU/t might not have impressed you. You have enough materials to put together the fluid nuke structure, but you want something more than what you've seen before. What kind of setup is powerful enough to output several IV amps, and sustain a developed IV base on its own? That sort of setup is shown in this quest, but it requires more multiblocks, and therefore more expense than the previous quest's chain. The fuel is the same, Uranium, so at this point it's certainly the least of your worries, until you try to automate the fuel input, at least.\n\nThe components inside the nuke get more and more complicated, so at this point I'm going to ask you to look at the wiki, under the Nuclear Reactors page ([url]https://wiki.gtnewhorizons.com/wiki/Nuclear_Reactors[/url]), and scroll down to the fluid nuke setups, specifically the 1352 HU, 2 Quad Uranium and 1408, 3 Quad Uranium, 1 Dual Uranium ones. The main difference between these two setups is that the first needs Iridium Neutron Reflectors, which are quite expensive if you haven't done the platline yet, while the second doesn't use them but is harder to automate due to having more than one type of rod.\n\nWhat's the final EU/t output, at 170% turbine efficiency? 36288 and 38016 EU/t, respectively.\n\nAfter automating the nuke itself, there is still more to do, though. The LHE is required, as usual, but these setups cause something new to happen: the LHE starts outputting Superheated Steam, due to the high flow of hot coolant that it receives, which means that you need two sets of turbines instead of one. This type of steam must go into Large HP Steam Turbines, which use a good amount of Tungstensteel for the controller and stacks of Titanium for the casings. After those, it goes into the usual Large Steam Turbines, and the process is complete.\n\nThere is yet another new thing to worry about, in case all of this wasn't enough: the Steam flow is very high, higher than before, which means it's likely you will need 3 or more of each turbine type, further compounding on the costs you'll have here.\n\nYour best option for a turbine in the IV tier is the HSS-E at 170% turbine efficiency.\n\nThere is another turbine at 180% efficiency with the HSS-S however; this turbine requires a robust platinum line completed to spare the resources for it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Powering-up Fluid Nukes",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3156
  ],
  "rewards": [],
  "tasks": []
}
