tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__SmallerFusionIsB-AAAAAAAAAAAAAAAAAAAMeg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3194,
  "prerequisites": [
    3192,
    3193
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's not smaller, it's compact!\n\nCompact Fusion. If you've been looking for a big multiblock to put together, you have arrived at a very neat thing. There's hardly anything that could beat its size, except for a max height Mega Distillation Tower, but this is instead a wide multi instead of a tall one. It is so wide, in fact, that it cannot fit in one chunk, and instead covers a 3x3 chunk space! Make sure you follow the instructions and the hologram properly, and jump in joy when you have one of these built.\n\nYou can choose one of four tiers for this reactor, in the same way as the normal Fusion Reactors. The Compact controller will need 48 of the regular controllers in the same tier, plus some other materials, and more than 2 thousand blocks in the structure, which are conveniently detailed in the tooltip. It is much bigger than the previous reactors, but it also has a huge number of parallels, starting at 64x with MK1 and ending at a maximum of 320x with t5!\n\nThis is the go-to when you have found yourself deep into MK3 fusion, perhaps even MK4, and you find yourself running short on power. Instead of making a tower of reactors, why not make one of these? The only power issue that you'll have after getting it done is the amount of turbines you will need to eat up all the plasma. You probably know about the XL Plasma Turbine, but you should also know that they force huge penalties on most plasmas, including Helium and Tin, if you use good turbine materials like Infinity. Do you remember those fusion chains mentioned in previous quests? This is the time for them. Check the \"How to Generate Power\" tab for more details.\n\n[note]Compacts follow different overclocking rules, needing double the startup power and double the voltage instead of just the voltage.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Smaller Fusion Is Bigger",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3192,
    3193
  ],
  "rewards": [],
  "tasks": []
}
